<resources>
    <string name="desc" translatable="false">desc</string>

    <!--Generic-->
    <string name="integer" translatable="false">%d</string>
    <string name="unknown">Unknown</string>
    <string name="item_friend_defy">Defy</string>

    <!--Error message-->
    <string name="error_emailInvalid">Invalid email !</string>
    <string name="error_passwordTooShort">Password too short !</string>
    <string name="error_pseudoEmpty">Empty pseudo !</string>
    <string name="error_no_internet">Network error.</string>
    <string name="error_conversion">Unexpected error.</string>
    <string name="error_createAccount">Can\'t create your account</string>
    <string name="error_network">Connection lost</string>
    <string name="error_unexpected">An error occur, please try again</string>
    <string name="error_socket_disconnected">Connection lost with host</string>

    <!--Error message (request failed)-->
    <string name="error_request_login">Cannot login.</string>
    <string name="error_request_forgotPassword">Cannot reset your password.</string>
    <string name="error_request_user">Cannot retrieve your data.</string>
    <string name="error_database_update">Cannot update database.</string>

    <!--Registration-->
    <string name="registration_msg_punchLine">Catch them all and became the champion !</string>
    <string name="registration_editText_pseudo">Pseudo</string>
    <string name="registration_editText_email">Email</string>
    <string name="registration_editText_password">Password</string>
    <string name="registration_msg_inscription">Registration</string>
    <string name="registration_msg_login">Log in</string>
    <string name="registration_msg_cgu">By clicking \'Registration\' you accept the therm of use.</string>
    <string name="registration_msg_forgotPassword">Forgot password ?</string>
    <string name="registration_msg_passwordSend">You will receive an email soon.</string>

    <!--Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_msg_gender">Gender : %s</string>
    <string name="profile_msg_pseudo">Pseudo : %s</string>
    <string name="profile_msg_birthDay">Birthday : %s</string>
    <string name="profile_msg_city">City : %s</string>
    <string name="profile_msg_registeredAt">Registered at : %s</string>
    <string name="profile_msg_email">Email : %s</string>
    <string name="profile_msg_background">Background: %s</string>
    <string name="profile_msg_level">Level: %s</string>
    <string name="profile_msg_avatar">Avatar: %s</string>
    <string name="profile_msg_logout">Log out</string>

    <!-- MonsterDetail-->
    <string name="monsterDetail_no_attack">This monster didn\'t have any attack</string>
    <string name="monsterDetail_title_characteristics">Characteristics: </string>
    <string name="monsterDetail_title_attack">Attacks:</string>
    <string name="monsterDetail_title_type">Type</string>
    <string name="monsterDetail_title_level">Level</string>
    <string name="monsterDetail_title_exp">Exp</string>

    <!--MainMenu-->
    <string name="mainMenu_action_chat">Chat</string>
    <string name="mainMenu_action_fight">fight</string>

    <!--MainMenu.tab.monsters-->
    <string name="tabMonster_msg_monsterAttack" formatted="false">Attack : %d / %d</string>
    <string name="tabMonster_msg_monsterDefence" formatted="false">Defense : %d / %d</string>
    <string name="tabMonster_msg_monsterHp" formatted="false">Hp : %d / %d</string>
    <string name="tabMonster_msg_monsterSpeed" formatted="false">Speed : %d / %d</string>
    <string name="tabMonster_msg_no_monsters">No monsters</string>

    <!--MainMenu.tab.home-->
    <string name="tabHome_title_creditsNumber">Credits</string>
    <string name="tabHome_title_monsterCaptured">Monster captured</string>
    <string name="tabHome_title_areaCaptured">Area captured</string>
    <string name="tabHome_title_allyOnline">Ally online</string>
    <string name="tabHome_msg_allyOnline">%d</string>
    <string name="tabHome_msg_monsterCaptured">%d</string>

    <!--MainMenu.tab.home.monsterList-->
    <string name="tabHome_title_monsterList">Your monster</string>
    <string name="tabHome_msg_userLvl">lvl %d</string>
    <string name="tabHome_msg_noMonster">You didn\'t have any monster</string>

    <!--MainMenu.tab.home.friendList-->
    <string name="tabHome_title_friendList">Your friend</string>
    <string name="tabHome_title_addFriend">Add friend</string>
    <string name="tabHome_title_addFriendDetail">Enter your friend\'s pseudo</string>
    <string name="tabHome_msg_addFriend">Add</string>
    <string name="tabHome_msg_friendPseudo">Pseudo</string>
    <string name="tabHome_msg_requestFightSend">Your fight request has been send</string>
    <string name="tabHome_msg_requestFightSuccess">Request send</string>
    <string name="tabHome_msg_requestFightFail">Request send</string>
    <string name="tabHome_msg_addFriendSuccess">Successfully added</string>
    <string name="tabHome_msg_addFriendFailed">Cannot add your friend</string>

    <!--MainMenu.tab.home.inventory-->
    <string name="tabInventory_msg_emptyInventory">Your inventory is empty</string>

    <!--MainMenu.tab.shop-->
    <string name="tabShop_nothing_to_buy">Nothing to buy</string>

    <!--Fight.teamSelection-->
    <string name="teamSelection_msg_help">Select the monster you want to fight with by clicking on the blue arrow.\n\nEach monster can be select only one time.</string>
    <string name="teamSelection_title">Team selection</string>
    <string name="teamSelection_msg_progress" formatted="false">%d recommended (%d required)</string>
    <string name="teamSelection_msg_monsterAttack">Attack %d</string>
    <string name="teamSelection_msg_monsterDefence">Defence: %d</string>
    <string name="teamSelection_msg_monsterHp">Hp: %d</string>

    <!--Fight.combat-->
    <string name="combat_msg_monsterLife">Life</string>
    <string name="combat_msg_monster_lvl">Lvl: %d</string>
    <string name="combat_msg_sendAtkFailed">Cannot send your attack, try again</string>

    <!--Fight.fightList-->
    <string name="fightList_title">Fight list</string>
    <string name="fightList_msg_acceptFight">Accept</string>
    <string name="fightList_msg_refuseFight">Refuse</string>

    <!--Chat-->
    <string name="chat_title">Chat</string>
    <string name="chat_msg_button">Send</string>
    <string name="chat_msg_startChat">Select the friend you want to chat with</string>
    <string name="chat_msg_noFriend">You don\'t have any friend</string>

    <!--Friend-->
    <string name="friendDetail_title">Statistics</string>
    <string name="friendDetail_title_catch">Catch</string>
    <string name="friendDetail_title_monster">Monster</string>
    <string name="friendDetail_msg_level" formatted="false">Level : %d</string>

    <!--Attack adapter-->
    <string name="item_attack_msg_attackType">Type: %s</string>
    <string name="item_attack_msg_attackName">Name: %s</string>
</resources>
