<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="8dip">

    <TextView
        android:id="@+id/textView_item_fight_dsc"
        style="@style/TypefaceStyle.ProximaNova.semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|start"
        android:padding="8dip"
        android:text="@string/unknown"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <Button
            android:id="@+id/button_item_fight_accept"
            style="@style/AppTheme.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fightList_msg_acceptFight"/>

        <Button
            android:id="@+id/button_item_fight_refuse"
            style="@style/AppTheme.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fightList_msg_refuseFight"/>

    </LinearLayout>

</LinearLayout>