<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dip"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="8dip">

    <TextView
        style="@style/TypefaceStyle.ProximaNova.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/apptheme_color"
        android:text="Monster characteristics: "/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="58dip"
            android:layout_height="58dip"
            android:layout_margin="8dip"
            android:src="@drawable/default_monster"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip">

            <TextView
                android:id="@+id/textView_monsterName"
                style="@style/TypefaceStyle.ProximaNova.light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabMonster_msg_monsterName"
                android:textColor="@color/apptheme_color"/>

            <TextView
                android:id="@+id/textView_monsterAttack"
                style="@style/TypefaceStyle.ProximaNova.light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabMonster_msg_monsterAttack"
                android:textColor="@color/apptheme_color"/>

            <TextView
                android:id="@+id/textView_monsterDefence"
                style="@style/TypefaceStyle.ProximaNova.light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabMonster_msg_monsterDefence"
                android:textColor="@color/apptheme_color"/>

            <TextView
                android:textColor="@color/apptheme_color"
                android:id="@+id/textView_monsterHp"
                style="@style/TypefaceStyle.ProximaNova.light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabMonster_msg_monsterHp"/>

            <TextView
                android:textColor="@color/apptheme_color"
                android:id="@+id/textView_monsterSpeed"
                style="@style/TypefaceStyle.ProximaNova.light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabMonster_msg_monsterSpeed"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>