<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/desc"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/nav_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dip"
            android:paddingRight="16dip">

            <TextView
                style="@style/TypefaceStyle.ProximaNova.semibold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:gravity="center"
                android:padding="8dip"
                android:text="@string/registration_msg_joinUs"
                android:textColor="@color/apptheme_color"
                android:textSize="22sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:background="#AAEEEEEE"
                android:padding="8dip">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_userEmail"
                    style="@style/TypefaceStyle.ProximaNova"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registration_editText_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/global_padding"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:background="#AAEEEEEE"
                android:padding="8dip">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_userPassword"
                    style="@style/TypefaceStyle.ProximaNova"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registration_editText_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:background="#AAEEEEEE"
                android:padding="8dip">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_pseudo"
                    style="@style/TypefaceStyle.ProximaNova"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registration_editText_pseudo"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_inscription"
                style="@style/TypefaceStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="12dip"
                android:text="@string/registration_msg_inscription"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView_forgotPassword"
                style="@style/TypefaceStyle.ProximaNova"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:gravity="center"
                android:padding="@dimen/global_padding"
                android:text="@string/registration_msg_cgu"
                android:textColor="@color/apptheme_color"
                android:textSize="16sp"/>
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/nav_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/desc"
        android:padding="@dimen/global_padding"
        android:src="@drawable/ic_navigation_chevron_left_green"/>

    <com.rey.material.widget.ProgressView
        android:id="@+id/progressView"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_centerInParent="true"
        app:cpd_strokeColor="@color/apptheme_color"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"/>

</RelativeLayout>