<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dip"
            android:paddingRight="16dip">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_userEmail"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:paddingLeft="16dip"
                android:paddingRight="16dip">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_userEmail"
                    style="@style/TypefaceStyle.ProximaNova"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/registration_editText_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_userPassword"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dip"
                android:paddingLeft="16dip"
                android:paddingRight="16dip"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/registration_editText_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="@style/AppTheme.button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/registration_msg_login"/>

            <TextView
                android:id="@+id/textView_forgotPassword"
                style="@style/TypefaceStyle.ProximaNova"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dip"
                android:clickable="true"
                android:gravity="center"
                android:padding="@dimen/global_padding"
                android:text="@string/registration_msg_forgotPassword"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

    </ScrollView>

    <com.rey.material.widget.ProgressView
        android:id="@+id/progressView"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_centerInParent="true"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"/>

</RelativeLayout>